[workspace.package]
version = "0.0.2"
edition = "2021"
authors = ["Broxus Team"]
rust-version = "1.80.0"
repository = "https://github.com/broxus/tycho-nekoton"
license = "MIT"

[workspace]
resolver = "2"
members = [
    "proc",
    "core",
    "transport",
    "utils",
]

[workspace.dependencies]
# crates.io deps
anyhow = "1.0"
async-trait = "0.1"
ed25519-dalek = "2.1"
tycho-types = { version = "0.2", features = ["tycho", "abi"] }
futures-util = "0.3"
hex = { version = "0.4" }
num-bigint = "0.4.6"
num-traits = "0.2"
parking_lot = { version = "0.12.1" }
pin-project = "1.1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false }
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["sync", "time"] }

case = "1.0.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

tycho-executor = "0.2"
tycho-vm = "0.2"

# local deps
nekoton-core = { path = "./core" }
nekoton-transport = { path = "./transport" }
nekoton-utils = { path = "./utils" }
nekoton-proc =  { path = "./proc" }

#[patch.crates-io]
#everscale-types = { git = "https://github.com/broxus/everscale-types.git" }

