[package]
name = "nekoton-abi"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = {workspace = true}
everscale-types = {workspace = true}
nekoton-utils = { workspace = true}
tycho-executor = {workspace = true}
tycho-vm = {workspace = true}
thiserror = {workspace = true}