[package]
name = "nekoton-core"
description = "TODO"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
everscale-types = { workspace = true }
futures-util = { workspace = true }
num-bigint = {workspace = true}
num-traits = {workspace = true}
serde = { workspace = true }
tycho-executor = {workspace = true}
tycho-vm = {workspace = true, features = ["tracing"]}

# local deps
nekoton-utils = { workspace = true }

[dev-dependencies]
base64 = { version = "0.22"}
nekoton-proc =  {workspace = true}