[package]
name = "nekoton-proc"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
case = {workspace = true}
proc-macro2 = {workspace = true, features = ["span-locations"]}
quote = {workspace = true}
syn = { workspace = true, features = ["full"] }
serde_json = {workspace = true}
tycho-types = {workspace = true}

