[package]
name = "nekoton-transport"
description = "TODO"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tycho-types = { workspace = true }
futures-util = { workspace = true }
parking_lot = { workspace = true }
#proof-api-util = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["gzip", "http2", "json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
thiserror = { workspace = true }
tokio = { workspace = true }
#ton-lite-client = {workspace = true}

# local deps
nekoton-core = { workspace = true }
nekoton-utils = { workspace = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["test-util", "macros"] }
