[package]
name = "nekoton-utils"
description = "TODO"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

